Fixed overlap issue on mobiles

--- a/app/assets/stylesheets/pages/preorder.scss
+++ b/app/assets/stylesheets/pages/preorder.scss
@@ -209,7 +209,6 @@ body.preorder {
         #step-frames {
             .select-frame {
                 .frame-img {
-                    margin-top: -50px;
                     width: 90%;
                 }
 
